--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
     <footer >
 <div class="borda">
-      <img src="borda esquerda (1).png" alt="">
+      <img width="214" height="400px" src="borda esquerdaV.svg" alt="">
+      <div class="meioB">
       <form>
         <label for="mail"><h3>Se inscreva em nossa newsletter</h3></label>
         <input type="email" id="mail" placeholder="email@example.com">
@@ -106,7 +107,8 @@
     <a name="j"></a>
 
     <p>todos os direitos reservados a Tomás Costacurta, Yann Fidelis e Davi Rocha, ONPA é um projeto FIAP para a future fest 2023</p>
-      <img src="borda direita.png" alt="">
+  </div>
+      <img width="214" height="400px" src="borda esquerda.svg" alt="">
 </div>
         
     </footer>
