--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <title>ONPA</title>
@@ -104,7 +104,7 @@
 
     <footer >
       <div class="borda">
-      <img width="214" height="400px" src="borda esquerdaV.svg" alt="">
+      <img width="214" height="400px" src="borda esquerda.svg" alt="">
 
       <div class="meioB">
       <form>
@@ -119,7 +119,7 @@
     <p>todos os direitos reservados a Tomás Costacurta, Yann Fidelis e Davi Rocha, ONPA é um projeto FIAP para a future fest 2023</p>
   </div>
  
-      <img width="214" height="400px" src="borda esquerda.svg" alt="">
+      <img width="214" height="400px" src="borda direita.svg" alt="">
     
       </div>
         
